# memo-s3-tweaks

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  release.yml
daemon/: Cargo.toml
daemon/src/: config.rs  core.rs  main.rs  pipeline.rs
daemon/src/plugin/: api.rs  mod.rs
docs/: PLUGINS.md
module/: keyforge.sh  module.prop  service.sh
module/webroot/: index.html
