[package]
name = "keyforge"
version = "0.1.0"
edition = "2024"
description = "Modular gamepad processor with Lua plugin support"

[[bin]]
name = "keyforge"
path = "src/main.rs"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
